--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,9 +56,9 @@
 
         <ImageView
             android:id="@+id/microphone"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginEnd="16sp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="24sp"
             android:src="@drawable/ic_baseline_mic_none_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +69,8 @@
 
         <ImageView
             android:id="@+id/copy"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginEnd="16sp"
             android:src="@drawable/ic_baseline_content_copy_24"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -151,6 +151,30 @@
                 app:layout_constraintVertical_bias="0.07999998" />
 
 
+            <TextView
+                android:id="@+id/trans"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/word"
+                app:layout_constraintVertical_bias="0.01" />
+
+            <TextView
+                android:id="@+id/definitionnnnnn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/trans"
+                app:layout_constraintVertical_bias="0.01" />
+
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/nushalash"
                 android:layout_width="56dp"
@@ -162,7 +186,7 @@
                 app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/word"
-                app:layout_constraintVertical_bias="0.3">
+                app:layout_constraintVertical_bias="0.5">
 
 
                 <ImageView
@@ -203,7 +227,7 @@
                 app:layout_constraintHorizontal_bias="0.36"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/word"
-                app:layout_constraintVertical_bias="0.3">
+                app:layout_constraintVertical_bias="0.5">
 
 
                 <ImageView
@@ -246,17 +270,17 @@
                 app:layout_constraintHorizontal_bias="0.61"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/word"
-                app:layout_constraintVertical_bias="0.3">
+                app:layout_constraintVertical_bias="0.5">
 
 
                 <ImageView
                     android:id="@+id/save"
                     android:layout_width="20sp"
-                    android:layout_height="30dp"
+                    android:layout_height="28dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_baseline_bookmark_24"
+                    android:src="@drawable/saved"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -289,7 +313,7 @@
                 app:layout_constraintHorizontal_bias="0.86"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/word"
-                app:layout_constraintVertical_bias="0.3">
+                app:layout_constraintVertical_bias="0.5">
 
 
                 <ImageView
@@ -364,6 +388,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
+                app:stackFromEnd="true"
+                app:reverseLayout="true"
                 android:layout_marginTop="12dp"
                 tools:listitem="@layout/item_main"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
