--- a/app/src/main/res/layout/item_seen.xml
+++ b/app/src/main/res/layout/item_seen.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingStart="5dp"
-    android:layout_marginEnd="23dp"
+   android:layout_marginTop="12sp"
+    android:layout_marginStart="12sp"
+    android:layout_marginEnd="12sp"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -49,7 +50,7 @@
 
 
             <ImageView
-                android:id="@+id/bookmark_btn"
+                android:id="@+id/bookmark"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="12sp"
